--- a/index.html
+++ b/index.html
@@ -55,5 +55,15 @@
         (window.jQuery || document.write('<script src="public/javascript/jquery-1.9.0.min.js"><\/script>'));
     </script>
     <script type="text/javascript" src="public/javascript/page.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-98204289-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 </body>
 </html>
