--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <ul class="cf fl">
                 <li><a href="/">home</a></li>
                 <li><a href="/">link</a></li>
+                <li><a href="/">test</a></li>
             </ul>
         </div>
         <h1>Hello World!</h1>
