--- a/index.html
+++ b/index.html
@@ -50,11 +50,7 @@
         </div>
     </div>
 
-    <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.min.js"></script>
-    <script>
-    // Fallback to loading jQuery from a local path if the CDN is unavailable
-        (window.jQuery || document.write('<script src="public/javascript/jquery-1.9.0.min.js"><\/script>'));
-    </script>
+    <script src="public/javascript/jquery-1.9.0.min.js"></script>
     <script type="text/javascript" src="public/javascript/page.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
