--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="header">
         <div class="container site-nav cf">
             <div class="logo fl">
-                <a href="/">z-h-y</a>
+                <a href="/" onclick="_gaq.push(['_trackEvent', 'logo', 'click logo', 'logo']);">z-h-y</a>
             </div>
             <ul class="cf fl">
                 <li><a href="/" onclick="_gaq.push(['_trackEvent', 'link', 'go to home', 'home']);">home</a></li>
